src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> instBlock
Rule 2     instBlock -> TkOBlock declare TkCBlock
Rule 3     instBlock -> TkOBlock declare code TkCBlock
Rule 4     instBlock -> TkOBlock code TkCBlock
Rule 5     declare -> TkDeclare declaration
Rule 6     declare -> TkDeclare seqDeclare
Rule 7     declaration -> DeclaList TkTwoPoints type
Rule 8     DeclaList -> TkId TkComma DeclaList
Rule 9     DeclaList -> TkId
Rule 10    seqDeclare -> declaration TkSemicolon declaration
Rule 11    seqDeclare -> seqDeclare TkSemicolon declaration
Rule 12    type -> TkInt
Rule 13    type -> TkBool
Rule 14    type -> TkArray TkOBracket TkNum TkSoForth TkNum TkCBracket
Rule 15    type -> TkArray TkOBracket TkMinus TkNum TkSoForth TkMinus TkNum TkCBracket
Rule 16    type -> TkArray TkOBracket TkNum TkSoForth TkMinus TkNum TkCBracket
Rule 17    type -> TkArray TkOBracket TkMinus TkNum TkSoForth TkNum TkCBracket
Rule 18    code -> instruction
Rule 19    code -> sequencing
Rule 20    sequencing -> instruction TkSemicolon instruction
Rule 21    sequencing -> sequencing TkSemicolon instruction
Rule 22    instPrint -> TkPrint printAble
Rule 23    instPrint -> TkPrint instConcat
Rule 24    instSkip -> TkSkip
Rule 25    instConcat -> printAble TkConcat printAble
Rule 26    instConcat -> instConcat TkConcat printAble
Rule 27    printAble -> TkString
Rule 28    printAble -> exp
Rule 29    arrayIni -> exp TkComma exp
Rule 30    arrayIni -> arrayIni TkComma exp
Rule 31    instAsig -> TkId TkAsig arrayIni
Rule 32    instAsig -> TkId TkAsig exp
Rule 33    instAsig -> TkId TkAsig modArray
Rule 34    instruction -> instPrint
Rule 35    instruction -> instAsig
Rule 36    instruction -> instSkip
Rule 37    instruction -> instBlock
Rule 38    instruction -> instIf
Rule 39    instruction -> instDo
Rule 40    instruction -> instFor
Rule 41    consArray -> TkId TkOBracket exp TkCBracket
Rule 42    consArray -> modArray TkOBracket exp TkCBracket
Rule 43    modArray -> modArray TkOpenPar exp TkTwoPoints exp TkClosePar
Rule 44    modArray -> finish
Rule 45    finish -> TkId TkOpenPar exp TkTwoPoints exp TkClosePar
Rule 46    exp -> exp TkPlus exp
Rule 47    exp -> exp TkMinus exp
Rule 48    exp -> exp TkMult exp
Rule 49    exp -> exp TkAnd exp
Rule 50    exp -> exp TkOr exp
Rule 51    exp -> exp TkLess exp
Rule 52    exp -> exp TkLeq exp
Rule 53    exp -> exp TkGeq exp
Rule 54    exp -> exp TkGreater exp
Rule 55    exp -> exp TkEqual exp
Rule 56    exp -> exp TkNEqual exp
Rule 57    exp -> TkNot exp
Rule 58    exp -> TkOpenPar exp TkClosePar
Rule 59    exp -> consArray
Rule 60    exp -> TkMinus exp
Rule 61    exp -> TkNum
Rule 62    exp -> TkTrue
Rule 63    exp -> TkFalse
Rule 64    exp -> TkId
Rule 65    instFor -> TkFor range TkArrow code TkRof
Rule 66    range -> TkId TkIn exp TkTo exp
Rule 67    instIf -> TkIf guards TkFi
Rule 68    instDo -> TkDo guards TkOd
Rule 69    guards -> guards TkGuard then
Rule 70    guards -> then
Rule 71    then -> exp TkArrow code
Rule 72    ignorados -> TkComment
Rule 73    ignorados -> TkSpace
Rule 74    ignorados -> TkNewLine
Rule 75    ignorados -> ignorados

Terminals, with rules where they appear

TkAnd                : 49
TkArray              : 14 15 16 17
TkArrow              : 65 71
TkAsig               : 31 32 33
TkBool               : 13
TkCBlock             : 2 3 4
TkCBracket           : 14 15 16 17 41 42
TkClosePar           : 43 45 58
TkComma              : 8 29 30
TkComment            : 72
TkConcat             : 25 26
TkDeclare            : 5 6
TkDo                 : 68
TkEqual              : 55
TkFalse              : 63
TkFi                 : 67
TkFor                : 65
TkGeq                : 53
TkGreater            : 54
TkGuard              : 69
TkId                 : 8 9 31 32 33 41 45 64 66
TkIf                 : 67
TkIn                 : 66
TkInt                : 12
TkLeq                : 52
TkLess               : 51
TkMinus              : 15 15 16 17 47 60
TkMult               : 48
TkNEqual             : 56
TkNewLine            : 74
TkNot                : 57
TkNum                : 14 14 15 15 16 16 17 17 61
TkOBlock             : 2 3 4
TkOBracket           : 14 15 16 17 41 42
TkOd                 : 68
TkOpenPar            : 43 45 58
TkOr                 : 50
TkPlus               : 46
TkPrint              : 22 23
TkRof                : 65
TkSemicolon          : 10 11 20 21
TkSkip               : 24
TkSoForth            : 14 15 16 17
TkSpace              : 73
TkString             : 27
TkTo                 : 66
TkTrue               : 62
TkTwoPoints          : 7 43 45
error                : 

Nonterminals, with rules where they appear

DeclaList            : 7 8
arrayIni             : 30 31
code                 : 3 4 65 71
consArray            : 59
declaration          : 5 10 10 11
declare              : 2 3
exp                  : 28 29 29 30 32 41 42 43 43 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 58 60 66 66 71
finish               : 44
guards               : 67 68 69
ignorados            : 75
instAsig             : 35
instBlock            : 1 37
instConcat           : 23 26
instDo               : 39
instFor              : 40
instIf               : 38
instPrint            : 34
instSkip             : 36
instruction          : 18 20 20 21
modArray             : 33 42 43
printAble            : 22 25 25 26
program              : 0
range                : 65
seqDeclare           : 6 11
sequencing           : 19 21
then                 : 69 70
type                 : 7

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . instBlock
    (2) instBlock -> . TkOBlock declare TkCBlock
    (3) instBlock -> . TkOBlock declare code TkCBlock
    (4) instBlock -> . TkOBlock code TkCBlock

    TkOBlock        shift and go to state 3

    program                        shift and go to state 1
    instBlock                      shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> instBlock .

    $end            reduce using rule 1 (program -> instBlock .)


state 3

    (2) instBlock -> TkOBlock . declare TkCBlock
    (3) instBlock -> TkOBlock . declare code TkCBlock
    (4) instBlock -> TkOBlock . code TkCBlock
    (5) declare -> . TkDeclare declaration
    (6) declare -> . TkDeclare seqDeclare
    (18) code -> . instruction
    (19) code -> . sequencing
    (34) instruction -> . instPrint
    (35) instruction -> . instAsig
    (36) instruction -> . instSkip
    (37) instruction -> . instBlock
    (38) instruction -> . instIf
    (39) instruction -> . instDo
    (40) instruction -> . instFor
    (20) sequencing -> . instruction TkSemicolon instruction
    (21) sequencing -> . sequencing TkSemicolon instruction
    (22) instPrint -> . TkPrint printAble
    (23) instPrint -> . TkPrint instConcat
    (31) instAsig -> . TkId TkAsig arrayIni
    (32) instAsig -> . TkId TkAsig exp
    (33) instAsig -> . TkId TkAsig modArray
    (24) instSkip -> . TkSkip
    (2) instBlock -> . TkOBlock declare TkCBlock
    (3) instBlock -> . TkOBlock declare code TkCBlock
    (4) instBlock -> . TkOBlock code TkCBlock
    (67) instIf -> . TkIf guards TkFi
    (68) instDo -> . TkDo guards TkOd
    (65) instFor -> . TkFor range TkArrow code TkRof

    TkDeclare       shift and go to state 6
    TkPrint         shift and go to state 16
    TkId            shift and go to state 17
    TkSkip          shift and go to state 18
    TkOBlock        shift and go to state 3
    TkIf            shift and go to state 19
    TkDo            shift and go to state 20
    TkFor           shift and go to state 21

    declare                        shift and go to state 4
    code                           shift and go to state 5
    instruction                    shift and go to state 7
    sequencing                     shift and go to state 8
    instPrint                      shift and go to state 9
    instAsig                       shift and go to state 10
    instSkip                       shift and go to state 11
    instBlock                      shift and go to state 12
    instIf                         shift and go to state 13
    instDo                         shift and go to state 14
    instFor                        shift and go to state 15

state 4

    (2) instBlock -> TkOBlock declare . TkCBlock
    (3) instBlock -> TkOBlock declare . code TkCBlock
    (18) code -> . instruction
    (19) code -> . sequencing
    (34) instruction -> . instPrint
    (35) instruction -> . instAsig
    (36) instruction -> . instSkip
    (37) instruction -> . instBlock
    (38) instruction -> . instIf
    (39) instruction -> . instDo
    (40) instruction -> . instFor
    (20) sequencing -> . instruction TkSemicolon instruction
    (21) sequencing -> . sequencing TkSemicolon instruction
    (22) instPrint -> . TkPrint printAble
    (23) instPrint -> . TkPrint instConcat
    (31) instAsig -> . TkId TkAsig arrayIni
    (32) instAsig -> . TkId TkAsig exp
    (33) instAsig -> . TkId TkAsig modArray
    (24) instSkip -> . TkSkip
    (2) instBlock -> . TkOBlock declare TkCBlock
    (3) instBlock -> . TkOBlock declare code TkCBlock
    (4) instBlock -> . TkOBlock code TkCBlock
    (67) instIf -> . TkIf guards TkFi
    (68) instDo -> . TkDo guards TkOd
    (65) instFor -> . TkFor range TkArrow code TkRof

    TkCBlock        shift and go to state 22
    TkPrint         shift and go to state 16
    TkId            shift and go to state 17
    TkSkip          shift and go to state 18
    TkOBlock        shift and go to state 3
    TkIf            shift and go to state 19
    TkDo            shift and go to state 20
    TkFor           shift and go to state 21

    code                           shift and go to state 23
    instruction                    shift and go to state 7
    sequencing                     shift and go to state 8
    instPrint                      shift and go to state 9
    instAsig                       shift and go to state 10
    instSkip                       shift and go to state 11
    instBlock                      shift and go to state 12
    instIf                         shift and go to state 13
    instDo                         shift and go to state 14
    instFor                        shift and go to state 15

state 5

    (4) instBlock -> TkOBlock code . TkCBlock

    TkCBlock        shift and go to state 24


state 6

    (5) declare -> TkDeclare . declaration
    (6) declare -> TkDeclare . seqDeclare
    (7) declaration -> . DeclaList TkTwoPoints type
    (10) seqDeclare -> . declaration TkSemicolon declaration
    (11) seqDeclare -> . seqDeclare TkSemicolon declaration
    (8) DeclaList -> . TkId TkComma DeclaList
    (9) DeclaList -> . TkId

    TkId            shift and go to state 28

    declaration                    shift and go to state 25
    seqDeclare                     shift and go to state 26
    DeclaList                      shift and go to state 27

state 7

    (18) code -> instruction .
    (20) sequencing -> instruction . TkSemicolon instruction

    TkCBlock        reduce using rule 18 (code -> instruction .)
    TkFi            reduce using rule 18 (code -> instruction .)
    TkGuard         reduce using rule 18 (code -> instruction .)
    TkOd            reduce using rule 18 (code -> instruction .)
    TkRof           reduce using rule 18 (code -> instruction .)
    TkSemicolon     shift and go to state 29


state 8

    (19) code -> sequencing .
    (21) sequencing -> sequencing . TkSemicolon instruction

    TkCBlock        reduce using rule 19 (code -> sequencing .)
    TkFi            reduce using rule 19 (code -> sequencing .)
    TkGuard         reduce using rule 19 (code -> sequencing .)
    TkOd            reduce using rule 19 (code -> sequencing .)
    TkRof           reduce using rule 19 (code -> sequencing .)
    TkSemicolon     shift and go to state 30


state 9

    (34) instruction -> instPrint .

    TkSemicolon     reduce using rule 34 (instruction -> instPrint .)
    TkCBlock        reduce using rule 34 (instruction -> instPrint .)
    TkFi            reduce using rule 34 (instruction -> instPrint .)
    TkGuard         reduce using rule 34 (instruction -> instPrint .)
    TkOd            reduce using rule 34 (instruction -> instPrint .)
    TkRof           reduce using rule 34 (instruction -> instPrint .)


state 10

    (35) instruction -> instAsig .

    TkSemicolon     reduce using rule 35 (instruction -> instAsig .)
    TkCBlock        reduce using rule 35 (instruction -> instAsig .)
    TkFi            reduce using rule 35 (instruction -> instAsig .)
    TkGuard         reduce using rule 35 (instruction -> instAsig .)
    TkOd            reduce using rule 35 (instruction -> instAsig .)
    TkRof           reduce using rule 35 (instruction -> instAsig .)


state 11

    (36) instruction -> instSkip .

    TkSemicolon     reduce using rule 36 (instruction -> instSkip .)
    TkCBlock        reduce using rule 36 (instruction -> instSkip .)
    TkFi            reduce using rule 36 (instruction -> instSkip .)
    TkGuard         reduce using rule 36 (instruction -> instSkip .)
    TkOd            reduce using rule 36 (instruction -> instSkip .)
    TkRof           reduce using rule 36 (instruction -> instSkip .)


state 12

    (37) instruction -> instBlock .

    TkSemicolon     reduce using rule 37 (instruction -> instBlock .)
    TkCBlock        reduce using rule 37 (instruction -> instBlock .)
    TkFi            reduce using rule 37 (instruction -> instBlock .)
    TkGuard         reduce using rule 37 (instruction -> instBlock .)
    TkOd            reduce using rule 37 (instruction -> instBlock .)
    TkRof           reduce using rule 37 (instruction -> instBlock .)


state 13

    (38) instruction -> instIf .

    TkSemicolon     reduce using rule 38 (instruction -> instIf .)
    TkCBlock        reduce using rule 38 (instruction -> instIf .)
    TkFi            reduce using rule 38 (instruction -> instIf .)
    TkGuard         reduce using rule 38 (instruction -> instIf .)
    TkOd            reduce using rule 38 (instruction -> instIf .)
    TkRof           reduce using rule 38 (instruction -> instIf .)


state 14

    (39) instruction -> instDo .

    TkSemicolon     reduce using rule 39 (instruction -> instDo .)
    TkCBlock        reduce using rule 39 (instruction -> instDo .)
    TkFi            reduce using rule 39 (instruction -> instDo .)
    TkGuard         reduce using rule 39 (instruction -> instDo .)
    TkOd            reduce using rule 39 (instruction -> instDo .)
    TkRof           reduce using rule 39 (instruction -> instDo .)


state 15

    (40) instruction -> instFor .

    TkSemicolon     reduce using rule 40 (instruction -> instFor .)
    TkCBlock        reduce using rule 40 (instruction -> instFor .)
    TkFi            reduce using rule 40 (instruction -> instFor .)
    TkGuard         reduce using rule 40 (instruction -> instFor .)
    TkOd            reduce using rule 40 (instruction -> instFor .)
    TkRof           reduce using rule 40 (instruction -> instFor .)


state 16

    (22) instPrint -> TkPrint . printAble
    (23) instPrint -> TkPrint . instConcat
    (27) printAble -> . TkString
    (28) printAble -> . exp
    (25) instConcat -> . printAble TkConcat printAble
    (26) instConcat -> . instConcat TkConcat printAble
    (46) exp -> . exp TkPlus exp
    (47) exp -> . exp TkMinus exp
    (48) exp -> . exp TkMult exp
    (49) exp -> . exp TkAnd exp
    (50) exp -> . exp TkOr exp
    (51) exp -> . exp TkLess exp
    (52) exp -> . exp TkLeq exp
    (53) exp -> . exp TkGeq exp
    (54) exp -> . exp TkGreater exp
    (55) exp -> . exp TkEqual exp
    (56) exp -> . exp TkNEqual exp
    (57) exp -> . TkNot exp
    (58) exp -> . TkOpenPar exp TkClosePar
    (59) exp -> . consArray
    (60) exp -> . TkMinus exp
    (61) exp -> . TkNum
    (62) exp -> . TkTrue
    (63) exp -> . TkFalse
    (64) exp -> . TkId
    (41) consArray -> . TkId TkOBracket exp TkCBracket
    (42) consArray -> . modArray TkOBracket exp TkCBracket
    (43) modArray -> . modArray TkOpenPar exp TkTwoPoints exp TkClosePar
    (44) modArray -> . finish
    (45) finish -> . TkId TkOpenPar exp TkTwoPoints exp TkClosePar

    TkString        shift and go to state 33
    TkNot           shift and go to state 36
    TkOpenPar       shift and go to state 37
    TkMinus         shift and go to state 35
    TkNum           shift and go to state 39
    TkTrue          shift and go to state 40
    TkFalse         shift and go to state 41
    TkId            shift and go to state 42

    printAble                      shift and go to state 31
    instConcat                     shift and go to state 32
    exp                            shift and go to state 34
    consArray                      shift and go to state 38
    modArray                       shift and go to state 43
    finish                         shift and go to state 44

state 17

    (31) instAsig -> TkId . TkAsig arrayIni
    (32) instAsig -> TkId . TkAsig exp
    (33) instAsig -> TkId . TkAsig modArray

    TkAsig          shift and go to state 45


state 18

    (24) instSkip -> TkSkip .

    TkSemicolon     reduce using rule 24 (instSkip -> TkSkip .)
    TkCBlock        reduce using rule 24 (instSkip -> TkSkip .)
    TkFi            reduce using rule 24 (instSkip -> TkSkip .)
    TkGuard         reduce using rule 24 (instSkip -> TkSkip .)
    TkOd            reduce using rule 24 (instSkip -> TkSkip .)
    TkRof           reduce using rule 24 (instSkip -> TkSkip .)


state 19

    (67) instIf -> TkIf . guards TkFi
    (69) guards -> . guards TkGuard then
    (70) guards -> . then
    (71) then -> . exp TkArrow code
    (46) exp -> . exp TkPlus exp
    (47) exp -> . exp TkMinus exp
    (48) exp -> . exp TkMult exp
    (49) exp -> . exp TkAnd exp
    (50) exp -> . exp TkOr exp
    (51) exp -> . exp TkLess exp
    (52) exp -> . exp TkLeq exp
    (53) exp -> . exp TkGeq exp
    (54) exp -> . exp TkGreater exp
    (55) exp -> . exp TkEqual exp
    (56) exp -> . exp TkNEqual exp
    (57) exp -> . TkNot exp
    (58) exp -> . TkOpenPar exp TkClosePar
    (59) exp -> . consArray
    (60) exp -> . TkMinus exp
    (61) exp -> . TkNum
    (62) exp -> . TkTrue
    (63) exp -> . TkFalse
    (64) exp -> . TkId
    (41) consArray -> . TkId TkOBracket exp TkCBracket
    (42) consArray -> . modArray TkOBracket exp TkCBracket
    (43) modArray -> . modArray TkOpenPar exp TkTwoPoints exp TkClosePar
    (44) modArray -> . finish
    (45) finish -> . TkId TkOpenPar exp TkTwoPoints exp TkClosePar

    TkNot           shift and go to state 36
    TkOpenPar       shift and go to state 37
    TkMinus         shift and go to state 35
    TkNum           shift and go to state 39
    TkTrue          shift and go to state 40
    TkFalse         shift and go to state 41
    TkId            shift and go to state 42

    guards                         shift and go to state 46
    then                           shift and go to state 47
    exp                            shift and go to state 48
    consArray                      shift and go to state 38
    modArray                       shift and go to state 43
    finish                         shift and go to state 44

state 20

    (68) instDo -> TkDo . guards TkOd
    (69) guards -> . guards TkGuard then
    (70) guards -> . then
    (71) then -> . exp TkArrow code
    (46) exp -> . exp TkPlus exp
    (47) exp -> . exp TkMinus exp
    (48) exp -> . exp TkMult exp
    (49) exp -> . exp TkAnd exp
    (50) exp -> . exp TkOr exp
    (51) exp -> . exp TkLess exp
    (52) exp -> . exp TkLeq exp
    (53) exp -> . exp TkGeq exp
    (54) exp -> . exp TkGreater exp
    (55) exp -> . exp TkEqual exp
    (56) exp -> . exp TkNEqual exp
    (57) exp -> . TkNot exp
    (58) exp -> . TkOpenPar exp TkClosePar
    (59) exp -> . consArray
    (60) exp -> . TkMinus exp
    (61) exp -> . TkNum
    (62) exp -> . TkTrue
    (63) exp -> . TkFalse
    (64) exp -> . TkId
    (41) consArray -> . TkId TkOBracket exp TkCBracket
    (42) consArray -> . modArray TkOBracket exp TkCBracket
    (43) modArray -> . modArray TkOpenPar exp TkTwoPoints exp TkClosePar
    (44) modArray -> . finish
    (45) finish -> . TkId TkOpenPar exp TkTwoPoints exp TkClosePar

    TkNot           shift and go to state 36
    TkOpenPar       shift and go to state 37
    TkMinus         shift and go to state 35
    TkNum           shift and go to state 39
    TkTrue          shift and go to state 40
    TkFalse         shift and go to state 41
    TkId            shift and go to state 42

    guards                         shift and go to state 49
    then                           shift and go to state 47
    exp                            shift and go to state 48
    consArray                      shift and go to state 38
    modArray                       shift and go to state 43
    finish                         shift and go to state 44

state 21

    (65) instFor -> TkFor . range TkArrow code TkRof
    (66) range -> . TkId TkIn exp TkTo exp

    TkId            shift and go to state 51

    range                          shift and go to state 50

state 22

    (2) instBlock -> TkOBlock declare TkCBlock .

    $end            reduce using rule 2 (instBlock -> TkOBlock declare TkCBlock .)
    TkSemicolon     reduce using rule 2 (instBlock -> TkOBlock declare TkCBlock .)
    TkCBlock        reduce using rule 2 (instBlock -> TkOBlock declare TkCBlock .)
    TkFi            reduce using rule 2 (instBlock -> TkOBlock declare TkCBlock .)
    TkGuard         reduce using rule 2 (instBlock -> TkOBlock declare TkCBlock .)
    TkOd            reduce using rule 2 (instBlock -> TkOBlock declare TkCBlock .)
    TkRof           reduce using rule 2 (instBlock -> TkOBlock declare TkCBlock .)


state 23

    (3) instBlock -> TkOBlock declare code . TkCBlock

    TkCBlock        shift and go to state 52


state 24

    (4) instBlock -> TkOBlock code TkCBlock .

    $end            reduce using rule 4 (instBlock -> TkOBlock code TkCBlock .)
    TkSemicolon     reduce using rule 4 (instBlock -> TkOBlock code TkCBlock .)
    TkCBlock        reduce using rule 4 (instBlock -> TkOBlock code TkCBlock .)
    TkFi            reduce using rule 4 (instBlock -> TkOBlock code TkCBlock .)
    TkGuard         reduce using rule 4 (instBlock -> TkOBlock code TkCBlock .)
    TkOd            reduce using rule 4 (instBlock -> TkOBlock code TkCBlock .)
    TkRof           reduce using rule 4 (instBlock -> TkOBlock code TkCBlock .)


state 25

    (5) declare -> TkDeclare declaration .
    (10) seqDeclare -> declaration . TkSemicolon declaration

    TkCBlock        reduce using rule 5 (declare -> TkDeclare declaration .)
    TkPrint         reduce using rule 5 (declare -> TkDeclare declaration .)
    TkId            reduce using rule 5 (declare -> TkDeclare declaration .)
    TkSkip          reduce using rule 5 (declare -> TkDeclare declaration .)
    TkOBlock        reduce using rule 5 (declare -> TkDeclare declaration .)
    TkIf            reduce using rule 5 (declare -> TkDeclare declaration .)
    TkDo            reduce using rule 5 (declare -> TkDeclare declaration .)
    TkFor           reduce using rule 5 (declare -> TkDeclare declaration .)
    TkSemicolon     shift and go to state 53


state 26

    (6) declare -> TkDeclare seqDeclare .
    (11) seqDeclare -> seqDeclare . TkSemicolon declaration

    TkCBlock        reduce using rule 6 (declare -> TkDeclare seqDeclare .)
    TkPrint         reduce using rule 6 (declare -> TkDeclare seqDeclare .)
    TkId            reduce using rule 6 (declare -> TkDeclare seqDeclare .)
    TkSkip          reduce using rule 6 (declare -> TkDeclare seqDeclare .)
    TkOBlock        reduce using rule 6 (declare -> TkDeclare seqDeclare .)
    TkIf            reduce using rule 6 (declare -> TkDeclare seqDeclare .)
    TkDo            reduce using rule 6 (declare -> TkDeclare seqDeclare .)
    TkFor           reduce using rule 6 (declare -> TkDeclare seqDeclare .)
    TkSemicolon     shift and go to state 54


state 27

    (7) declaration -> DeclaList . TkTwoPoints type

    TkTwoPoints     shift and go to state 55


state 28

    (8) DeclaList -> TkId . TkComma DeclaList
    (9) DeclaList -> TkId .

    TkComma         shift and go to state 56
    TkTwoPoints     reduce using rule 9 (DeclaList -> TkId .)


state 29

    (20) sequencing -> instruction TkSemicolon . instruction
    (34) instruction -> . instPrint
    (35) instruction -> . instAsig
    (36) instruction -> . instSkip
    (37) instruction -> . instBlock
    (38) instruction -> . instIf
    (39) instruction -> . instDo
    (40) instruction -> . instFor
    (22) instPrint -> . TkPrint printAble
    (23) instPrint -> . TkPrint instConcat
    (31) instAsig -> . TkId TkAsig arrayIni
    (32) instAsig -> . TkId TkAsig exp
    (33) instAsig -> . TkId TkAsig modArray
    (24) instSkip -> . TkSkip
    (2) instBlock -> . TkOBlock declare TkCBlock
    (3) instBlock -> . TkOBlock declare code TkCBlock
    (4) instBlock -> . TkOBlock code TkCBlock
    (67) instIf -> . TkIf guards TkFi
    (68) instDo -> . TkDo guards TkOd
    (65) instFor -> . TkFor range TkArrow code TkRof

    TkPrint         shift and go to state 16
    TkId            shift and go to state 17
    TkSkip          shift and go to state 18
    TkOBlock        shift and go to state 3
    TkIf            shift and go to state 19
    TkDo            shift and go to state 20
    TkFor           shift and go to state 21

    instruction                    shift and go to state 57
    instPrint                      shift and go to state 9
    instAsig                       shift and go to state 10
    instSkip                       shift and go to state 11
    instBlock                      shift and go to state 12
    instIf                         shift and go to state 13
    instDo                         shift and go to state 14
    instFor                        shift and go to state 15

state 30

    (21) sequencing -> sequencing TkSemicolon . instruction
    (34) instruction -> . instPrint
    (35) instruction -> . instAsig
    (36) instruction -> . instSkip
    (37) instruction -> . instBlock
    (38) instruction -> . instIf
    (39) instruction -> . instDo
    (40) instruction -> . instFor
    (22) instPrint -> . TkPrint printAble
    (23) instPrint -> . TkPrint instConcat
    (31) instAsig -> . TkId TkAsig arrayIni
    (32) instAsig -> . TkId TkAsig exp
    (33) instAsig -> . TkId TkAsig modArray
    (24) instSkip -> . TkSkip
    (2) instBlock -> . TkOBlock declare TkCBlock
    (3) instBlock -> . TkOBlock declare code TkCBlock
    (4) instBlock -> . TkOBlock code TkCBlock
    (67) instIf -> . TkIf guards TkFi
    (68) instDo -> . TkDo guards TkOd
    (65) instFor -> . TkFor range TkArrow code TkRof

    TkPrint         shift and go to state 16
    TkId            shift and go to state 17
    TkSkip          shift and go to state 18
    TkOBlock        shift and go to state 3
    TkIf            shift and go to state 19
    TkDo            shift and go to state 20
    TkFor           shift and go to state 21

    instruction                    shift and go to state 58
    instPrint                      shift and go to state 9
    instAsig                       shift and go to state 10
    instSkip                       shift and go to state 11
    instBlock                      shift and go to state 12
    instIf                         shift and go to state 13
    instDo                         shift and go to state 14
    instFor                        shift and go to state 15

state 31

    (22) instPrint -> TkPrint printAble .
    (25) instConcat -> printAble . TkConcat printAble

    TkSemicolon     reduce using rule 22 (instPrint -> TkPrint printAble .)
    TkCBlock        reduce using rule 22 (instPrint -> TkPrint printAble .)
    TkFi            reduce using rule 22 (instPrint -> TkPrint printAble .)
    TkGuard         reduce using rule 22 (instPrint -> TkPrint printAble .)
    TkOd            reduce using rule 22 (instPrint -> TkPrint printAble .)
    TkRof           reduce using rule 22 (instPrint -> TkPrint printAble .)
    TkConcat        shift and go to state 59


state 32

    (23) instPrint -> TkPrint instConcat .
    (26) instConcat -> instConcat . TkConcat printAble

    TkSemicolon     reduce using rule 23 (instPrint -> TkPrint instConcat .)
    TkCBlock        reduce using rule 23 (instPrint -> TkPrint instConcat .)
    TkFi            reduce using rule 23 (instPrint -> TkPrint instConcat .)
    TkGuard         reduce using rule 23 (instPrint -> TkPrint instConcat .)
    TkOd            reduce using rule 23 (instPrint -> TkPrint instConcat .)
    TkRof           reduce using rule 23 (instPrint -> TkPrint instConcat .)
    TkConcat        shift and go to state 60


state 33

    (27) printAble -> TkString .

    TkConcat        reduce using rule 27 (printAble -> TkString .)
    TkSemicolon     reduce using rule 27 (printAble -> TkString .)
    TkCBlock        reduce using rule 27 (printAble -> TkString .)
    TkFi            reduce using rule 27 (printAble -> TkString .)
    TkGuard         reduce using rule 27 (printAble -> TkString .)
    TkOd            reduce using rule 27 (printAble -> TkString .)
    TkRof           reduce using rule 27 (printAble -> TkString .)


state 34

    (28) printAble -> exp .
    (46) exp -> exp . TkPlus exp
    (47) exp -> exp . TkMinus exp
    (48) exp -> exp . TkMult exp
    (49) exp -> exp . TkAnd exp
    (50) exp -> exp . TkOr exp
    (51) exp -> exp . TkLess exp
    (52) exp -> exp . TkLeq exp
    (53) exp -> exp . TkGeq exp
    (54) exp -> exp . TkGreater exp
    (55) exp -> exp . TkEqual exp
    (56) exp -> exp . TkNEqual exp

    TkConcat        reduce using rule 28 (printAble -> exp .)
    TkSemicolon     reduce using rule 28 (printAble -> exp .)
    TkCBlock        reduce using rule 28 (printAble -> exp .)
    TkFi            reduce using rule 28 (printAble -> exp .)
    TkGuard         reduce using rule 28 (printAble -> exp .)
    TkOd            reduce using rule 28 (printAble -> exp .)
    TkRof           reduce using rule 28 (printAble -> exp .)
    TkPlus          shift and go to state 61
    TkMinus         shift and go to state 62
    TkMult          shift and go to state 63
    TkAnd           shift and go to state 64
    TkOr            shift and go to state 65
    TkLess          shift and go to state 66
    TkLeq           shift and go to state 67
    TkGeq           shift and go to state 68
    TkGreater       shift and go to state 69
    TkEqual         shift and go to state 70
    TkNEqual        shift and go to state 71


state 35

    (60) exp -> TkMinus . exp
    (46) exp -> . exp TkPlus exp
    (47) exp -> . exp TkMinus exp
    (48) exp -> . exp TkMult exp
    (49) exp -> . exp TkAnd exp
    (50) exp -> . exp TkOr exp
    (51) exp -> . exp TkLess exp
    (52) exp -> . exp TkLeq exp
    (53) exp -> . exp TkGeq exp
    (54) exp -> . exp TkGreater exp
    (55) exp -> . exp TkEqual exp
    (56) exp -> . exp TkNEqual exp
    (57) exp -> . TkNot exp
    (58) exp -> . TkOpenPar exp TkClosePar
    (59) exp -> . consArray
    (60) exp -> . TkMinus exp
    (61) exp -> . TkNum
    (62) exp -> . TkTrue
    (63) exp -> . TkFalse
    (64) exp -> . TkId
    (41) consArray -> . TkId TkOBracket exp TkCBracket
    (42) consArray -> . modArray TkOBracket exp TkCBracket
    (43) modArray -> . modArray TkOpenPar exp TkTwoPoints exp TkClosePar
    (44) modArray -> . finish
    (45) finish -> . TkId TkOpenPar exp TkTwoPoints exp TkClosePar

    TkNot           shift and go to state 36
    TkOpenPar       shift and go to state 37
    TkMinus         shift and go to state 35
    TkNum           shift and go to state 39
    TkTrue          shift and go to state 40
    TkFalse         shift and go to state 41
    TkId            shift and go to state 42

    exp                            shift and go to state 72
    consArray                      shift and go to state 38
    modArray                       shift and go to state 43
    finish                         shift and go to state 44

state 36

    (57) exp -> TkNot . exp
    (46) exp -> . exp TkPlus exp
    (47) exp -> . exp TkMinus exp
    (48) exp -> . exp TkMult exp
    (49) exp -> . exp TkAnd exp
    (50) exp -> . exp TkOr exp
    (51) exp -> . exp TkLess exp
    (52) exp -> . exp TkLeq exp
    (53) exp -> . exp TkGeq exp
    (54) exp -> . exp TkGreater exp
    (55) exp -> . exp TkEqual exp
    (56) exp -> . exp TkNEqual exp
    (57) exp -> . TkNot exp
    (58) exp -> . TkOpenPar exp TkClosePar
    (59) exp -> . consArray
    (60) exp -> . TkMinus exp
    (61) exp -> . TkNum
    (62) exp -> . TkTrue
    (63) exp -> . TkFalse
    (64) exp -> . TkId
    (41) consArray -> . TkId TkOBracket exp TkCBracket
    (42) consArray -> . modArray TkOBracket exp TkCBracket
    (43) modArray -> . modArray TkOpenPar exp TkTwoPoints exp TkClosePar
    (44) modArray -> . finish
    (45) finish -> . TkId TkOpenPar exp TkTwoPoints exp TkClosePar
